<resources>
    <string name="app_name">Tasks</string>
    <string name="title_item_detail">Board</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_login">Sign in</string>
    <string name="only_i_can_edit_this_board">Only I can edit this task</string>
    <string name="freeze">Freeze</string>
    <string name="only_approved_drawers_can_view_this_board">Only approved drawers can view this task</string>
    <string name="private_label">Private</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="dummy_board_name">BoardName</string>
    <string name="line_thickness">Line Thickness</string>
    <string name="search_for_a_board">Search for a Board</string>
    <string name="search">Search</string>
    <string name="deny">deny</string>
    <string name="grant">grant</string>
    <string name="you_are_not_allowed_to_draw_on_this_board">You are not allowed to draw on this task.</string>
    <string name="not_allowed_to_draw">You are not allowed to draw on this task.</string>
    <string name="username">USERNAME</string>
    <string name="share">Share</string>
    <string name="accept">accept</string>
    <string name="board_access_request">Board Access Request</string>
    <string name="allow_access_to_test_test_com_for_board_test">Allow access to test@test.com for task TEST</string>
    <string name="choose_a_color">Choose a color</string>
    <string name="lorem_ipsum_lorem_ipsum">lorem ipsum lorem ipsum</string>
    <string name="boardname">BoardName</string>
    <string name="dummy_boardname">BoardName</string>
    <string name="clear_lines_of_board">Do you want to clear all the lines of this task?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="yes">yes</string>
    <string name="logout">Logout</string>
    <string name="dummy_username">Username</string>
    <string name="access_request">"Allow access to user %1$s on task %2$s"</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Create new account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="facebook_app_id">147297545913975</string>
    <string name="fb_login_protocol_scheme">fb147297545913975</string>

    <string name="line_size">Lines: %1$d</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="night_mode">Night mode</string>
    <string name="user_already_exists">User with the same name already exists</string>
    <string name="board_added">Board added to your list.</string>
    <string name="request_access_to_board">Request access to task!</string>
    <string name="loading">Loading</string>
    <string name="wait_while_loading_lines">Wait while loading lines.</string>
    <string name="favorites">Favorites</string>
    <string name="my_boards">My Boards</string>
    <string name="browse">Browse</string>
    <string name="grant_camera_permissions">Please grant camera permission to use the QR Scanner</string>
    <string name="successfull_grant_access">Successfully grant access to user</string>
    <string name="user_has_no_access">User %1$s has no access to the task.</string>
    <string name="my_tasks">My Tasks</string>
    <string name="groups">Groups</string>
    <string name="done">Done</string>
    <string name="tasks">Tasks</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="members">Members</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>


</resources>
