<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/pop_invite_request"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/popupBackground"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:text="@string/board_access_request"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size"/>


    <TextView
        android:id="@+id/dialog_invite_request_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:text="@string/lorem_ipsum_lorem_ipsum"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_invite_request_deny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/deny"
            android:textColor="@color/popupButtonForeground"/>

        <Button
            android:id="@+id/dialog_invite_request_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/accept"
            android:textColor="@color/popupButtonForeground"/>
    </LinearLayout>

</LinearLayout>
