<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/pop_new_board_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/popupBackground"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:id="@+id/dialog_accept_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_access_to_test_test_com_for_board_test"
        android:textColor="@color/textColor"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dialog_accept_btn_deny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/deny"
            android:textColor="@color/popupButtonForeground"/>

        <Button
            android:id="@+id/dialog_accept_btn_grant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/grant"
            android:textColor="@color/popupButtonForeground"/>
    </LinearLayout>

</LinearLayout>
