<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_night_mode_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/settings_night_mode_closeDialogImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_clear_black_24dp"
        android:tint="#fff"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways|snap">


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                <RadioButton
                    android:id="@+id/settings_night_mode_follow_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:text="@string/menu_night_mode_system"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:id="@+id/settings_night_mode_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:text="@string/menu_night_mode_day"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:id="@+id/settings_night_mode_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:text="@string/menu_night_mode_night"
                    android:textColor="@android:color/white"/>

                <RadioButton
                    android:id="@+id/settings_night_mode_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white"
                    android:text="@string/menu_night_mode_auto"
                    android:textColor="@android:color/white"/>
            </RadioGroup>


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>