<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pop_stat_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/popupBackground"
                android:orientation="vertical"
                android:padding="16dp">

    <ImageView
        android:id="@+id/pop_info_board_closeDialogImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_clear_black_24dp"
        android:tint="#fff"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/dialog_info_board_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_boardname"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/dialog_info_btn_add_member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="4"
                android:background="@drawable/button"
                android:text="@string/members"
                android:textColor="@color/popupButtonForeground"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_info_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/delete"
                android:textColor="@color/popupButtonForeground"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
