<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/login_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/splashscreen_background"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              tools:context="io.gloop.tasks.LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tasks"
                android:textColor="@android:color/white"
                android:textSize="60sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textColorHighlight="@color/login_text_color"
                    android:textColorHint="@color/login_text_color"
                    android:textColorLink="@color/login_text_color"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/login_text_color"
                    android:textColorHighlight="@color/login_text_color"
                    android:textColorHint="@color/login_text_color"
                    android:textColorLink="@color/login_text_color"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/login_button_background"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/login_button_text_color"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="16dp"
                    android:background="@color/login_button_background"
                    android:text="@string/sign_up"
                    android:textColor="@color/login_button_text_color"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/or"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="-3dp"
                        android:layout_weight="1"/>

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebook_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:paddingBottom="11dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="11dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/or"/>

                <Button
                    android:id="@+id/skip_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="16dp"
                    android:background="@color/login_button_background"
                    android:text="@string/skip"
                    android:textColor="@color/login_button_text_color"
                    android:textStyle="bold"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
